--- a/src/app/Components/hijo/hijo.component.html
+++ b/src/app/Components/hijo/hijo.component.html
@@ -1,6 +1,6 @@
 <div style="border-style: solid;">
     <h3>Componente hijo</h3>
-    <p>String personal: {{variable}}</p>
+    <p>String propio: {{variable}}</p>
     <button (click)="click()">Cambiar string</button>
     <p>String del padre: {{titulo}}</p>
 
