conexion componentes con servicios

--- a/src/app/Views/correos-recibidos/correos-recibidos.component.html
+++ b/src/app/Views/correos-recibidos/correos-recibidos.component.html
@@ -1,5 +1,9 @@
-<mat-toolbar>Correos recibidos</mat-toolbar>
-<mat-divider></mat-divider>
+<h1>Vista Correos Recibidos</h1>
+<hr>
 <div>
     <app-lista-correos></app-lista-correos>
+</div>
+<hr>
+<div>
+    <app-avisos></app-avisos>
 </div>
