--- a/src/app/Components/correo/correo.component.html
+++ b/src/app/Components/correo/correo.component.html
@@ -1,4 +1,7 @@
-<h1>{{correo.titulo}}</h1>
-<p>De: {{correo.emisor}}</p>
-<p>A: {{correo.destinatario}}</p>
-<p>{{correo.cuerpo}}</p>
+<mat-card>
+<mat-card-header>
+    <mat-card-title>Asunto: {{correo.titulo}}</mat-card-title>
+    <mat-card-subtitle>De: {{correo.emisor}}</mat-card-subtitle>
+</mat-card-header>
+<mat-card-content>{{correo.cuerpo}}</mat-card-content>
+</mat-card>
