--- a/src/app/Views/correos-recibidos/correos-recibidos.component.html
+++ b/src/app/Views/correos-recibidos/correos-recibidos.component.html
@@ -1,9 +1,5 @@
-<h1>Vista Correos Recibidos</h1>
-<hr>
+<mat-toolbar>Correos recibidos</mat-toolbar>
+<mat-divider></mat-divider>
 <div>
     <app-lista-correos></app-lista-correos>
-</div>
-<hr>
-<div>
-    <app-avisos></app-avisos>
 </div>
