--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'Themes/themeWhite.scss';
+@import 'Themes/themeRed.scss';
+@include angular-material-theme($light-theme);
+
+.other-theme {
+    @include angular-material-theme($dark-theme);
+}
+
+
+html, body { height: 100%; }
+body { 
+    margin: 0; 
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: $accent-color;
+}
